--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_choose_school">ChooseSchoolActivity</string>
+    <string name="banner_ad_unit_id">ca-app-pub-2240385250304925/6979150299</string>
 </resources>
